blender crashes when loading the file #58535

Closed
opened 2018-12-02 17:28:55 +01:00 by Gernot Buder · 7 comments

System Information
Operating system: win 10
Graphics card: 1070

Blender Version
Broken:
2.80, 925380050d, blender2.8, 2018-12-02
Worked: (optional)

Short description of error
blender crashes when loading attached file
crashes_on_load.blend
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system: win 10 Graphics card: 1070 **Blender Version** Broken: 2.80, 925380050d0, blender2.8, 2018-12-02 Worked: (optional) **Short description of error** blender crashes when loading attached file [crashes_on_load.blend](https://archive.blender.org/developer/F5791169/crashes_on_load.blend) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @Gernot-Buder

Added subscriber: @Gernot-Buder

Added subscriber: @brhumphe

Added subscriber: @brhumphe

Confirmed, got the following when running from CMD:

Read prefs: C:\Users\moogl_000\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend
AL lib: (EE) UpdateDeviceParams: Failed to set 48000hz, got 44100hz instead
found bundled python: C:\Users\moogl_000\Desktop\blender-2.80.0-git.925380050d0-windows64\2.80\python
Read blend: C:\Users\moogl_000\Downloads\crashes_on_load.blend
Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF7E152F7B9
Module  : C:\Users\moogl_000\Desktop\blender-2.80.0-git.925380050d0-windows64\blender.exe
Confirmed, got the following when running from CMD: ``` Read prefs: C:\Users\moogl_000\AppData\Roaming\Blender Foundation\Blender\2.80\config\userpref.blend AL lib: (EE) UpdateDeviceParams: Failed to set 48000hz, got 44100hz instead found bundled python: C:\Users\moogl_000\Desktop\blender-2.80.0-git.925380050d0-windows64\2.80\python Read blend: C:\Users\moogl_000\Downloads\crashes_on_load.blend Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF7E152F7B9 Module : C:\Users\moogl_000\Desktop\blender-2.80.0-git.925380050d0-windows64\blender.exe ```

Added subscribers: @fclem, @antoniov, @mont29

Added subscribers: @fclem, @antoniov, @mont29
Antonio Vazquez was assigned by Bastien Montagne 2018-12-02 20:47:22 +01:00

Crash happens in GPencil drawing code, ob->runtime.gpencil_cache is NULL in DRW_gpencil_populate_particles() (called from GPENCIL_cache_finish() callback).

@antoniov that one is probably for you? but maybe @fclem also wants to have a look…

Crash happens in GPencil drawing code, `ob->runtime.gpencil_cache` is NULL in `DRW_gpencil_populate_particles()` (called from `GPENCIL_cache_finish()` callback). @antoniov that one is probably for you? but maybe @fclem also wants to have a look…

This issue was referenced by 63d0ea8ecf

This issue was referenced by 63d0ea8ecf488e330a6717365b685e1339498fdb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58535
No description provided.