Fix T58535 Crash on Load

The particles was not ready when the drawing cache try to use it.